--- a/HolidayGreetings/HappyNewYear2021_Julia.ipynb
+++ b/HolidayGreetings/HappyNewYear2021_Julia.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Happy Newy Year 2021\n",
+    "# Happy New Year 2021\n",
     "## With Julia\n",
     "Author: Sumudu Tennakoon\\\n",
     "Created Date: 2021-01-01"
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 1: Setup Characters"
+    "## Task 1: Setup Display Characters"
    ]
   },
   {
@@ -38,17 +38,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HAPPY NEWY YEAR 2021\n",
-      "Message Length (charcters) = 20\n"
+      "HAPPY NEW YEAR 2021\n",
+      "Message Length (Characters) = 19\n"
      ]
     }
    ],
    "source": [
-    "Message = \"Happy Newy Year 2021\"\n",
+    "Message = \"Happy New Year 2021\"\n",
     "# Convert to upper case\n",
     "Message = uppercase(Message)\n",
     "println(Message)\n",
-    "println(\"Message Length (charcters) = \", length(Message))"
+    "println(\"Message Length (Characters) = \", length(Message))"
    ]
   },
   {
@@ -60,16 +60,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of unique charcters = 12\n",
+      "Number of Unique Characters = 12\n",
       "Set(['P', '1', 'H', 'E', 'W', '0', 'A', 'Y', '2', 'R', ' ', 'N'])\n"
      ]
     }
    ],
    "source": [
-    "# Find Unique Charcters\n",
-    "Charcters = Set(Message)\n",
-    "println(\"Number of unique charcters = \", length(Charcters))\n",
-    "println(Charcters)"
+    "# Find Unique Characters\n",
+    "Characters = Set(Message)\n",
+    "println(\"Number of Unique Characters = \", length(Characters))\n",
+    "println(Characters)"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's setup those unique charcters display ready.\n",
+    "### Let's setup those unique characters display ready.\n",
     "The choosen grid for single charcter is 5 x 5"
    ]
   },
@@ -194,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's make some decorative charcters to make greeting more presnetable"
+    "### Let's make some decorative characters to make greeting more presentable"
    ]
   },
   {
@@ -256,12 +256,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Functions to finalize charcters"
+    "### Functions to finalize characters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "whole_half (generic function with 1 method)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "display_charcter (generic function with 2 methods)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        " \"       \""
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,12 +368,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 2: Assemble Lines of Greeting"
+    "## Task 2: Assemble Lines of the Greeting Message"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        " [\"       \", \" #   # \", \"  # #  \", \"   #   \", \"   #   \", \"   #   \", \"       \"]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        " \"                                   \""
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -465,12 +465,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 4: Add Colors to Print Message Line"
+    "## Task 4: Add Colors to Printed Message Line"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -499,12 +499,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 5: Create a Function to Print a Given Line of Charcters "
+    "## Task 5: Create a Function to Print a Given Line of Charcters (Combine codes from Task 2-4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "print_decorated_line (generic function with 1 method)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
