--- a/HolidayGreetings/HappyNewYear2021_Python.ipynb
+++ b/HolidayGreetings/HappyNewYear2021_Python.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Happy Newy Year 2021\n",
+    "# Happy New Year 2021\n",
     "## With Python\n",
     "Author: Sumudu Tennakoon\\\n",
     "Created Date: 2021-01-01"
@@ -26,7 +26,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 1: Setup Characters"
+    "## Task 1: Setup Display Characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HAPPY NEW YEAR 2021\n",
+      "Message Length (Characters) =  19\n"
+     ]
+    }
+   ],
+   "source": [
+    "Message = \"Happy New Year 2021\"\n",
+    "# Convert to upper case\n",
+    "Message = Message.upper()\n",
+    "print(Message)\n",
+    "print(\"Message Length (Characters) = \", len(Message))"
    ]
   },
   {
@@ -38,38 +60,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HAPPY NEWY YEAR 2021\n",
-      "Message Length (charcters) =  20\n"
-     ]
-    }
-   ],
-   "source": [
-    "Message = \"Happy Newy Year 2021\"\n",
-    "# Convert to upper case\n",
-    "Message = Message.upper()\n",
-    "print(Message)\n",
-    "print(\"Message Length (charcters) = \", len(Message))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of unique charcters =  12\n",
-      "{'A', 'E', '0', '1', 'P', 'N', 'W', 'R', 'H', '2', 'Y', ' '}\n"
+      "Number of Unique Characters =  12\n",
+      "{'A', '2', 'P', 'H', 'Y', 'N', 'W', '0', ' ', 'E', '1', 'R'}\n"
      ]
     }
    ],
    "source": [
     "# Find Unique Charcters\n",
-    "Charcters = set(Message)\n",
-    "print(\"Number of unique charcters = \", len(Charcters))\n",
-    "print(Charcters)"
+    "Characters = set(Message)\n",
+    "print(\"Number of Unique Characters = \", len(Characters))\n",
+    "print(Characters)"
    ]
   },
   {
@@ -83,13 +83,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's setup those unique charcters display ready.\n",
+    "### Let's setup those unique characters display ready.\n",
     "The choosen grid for single charcter is 5 x 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,12 +194,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's make some decorative charcters to make greeting more presnetable"
+    "### Let's make some decorative characters to make greeting more presentable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,12 +256,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Functions to finalize charcters"
+    "### Functions to finalize characters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "['', '#   #', '#   #', '#####', '#   #', '#   #', '']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "['         ', '', '#   #', '#   #', '#####', '#   #', '#   #', '']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,27 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "canvas_width"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +377,7 @@
        "['       ', ' #   # ', ' #   # ', ' ##### ', ' #   # ', ' #   # ', '       ']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,12 +390,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 2: Assemble Lines of Greeting"
+    "## Task 2:  Assemble Lines of the Greeting Message"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -433,19 +413,21 @@
        "        '       ']], dtype='<U7')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "characters = np.array([display_charcter(c) for c in [H,A,P,P,Y]])\n",
     "characters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +442,7 @@
        "       '                                   '], dtype='<U35')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -509,12 +491,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 4: Add Colors to Print Message Line"
+    "## Task 4: Add Colors to Printed Message Line"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
