--- a/HolidayGreetings/HappyNewYear2021_Julia.ipynb
+++ b/HolidayGreetings/HappyNewYear2021_Julia.ipynb
@@ -293,7 +293,7 @@
     {
      "data": {
       "text/plain": [
-       "display_charcter (generic function with 2 methods)"
+       "display_character (generic function with 2 methods)"
       ]
      },
      "execution_count": 6,
@@ -302,7 +302,7 @@
     }
    ],
    "source": [
-    "function display_charcter(s, canvas_size=(7,7))\n",
+    "function display_character(s, canvas_size=(7,7))\n",
     "    s = split(s, '\\n')\n",
     "    \n",
     "    character_height = length(s)\n",
@@ -361,7 +361,7 @@
     }
    ],
    "source": [
-    "display_charcter(H)"
+    "display_character(H)"
    ]
   },
   {
@@ -393,7 +393,7 @@
     }
    ],
    "source": [
-    "characters = display_charcter.([H,A,P,P,Y])"
+    "characters = display_character.([H,A,P,P,Y])"
    ]
   },
   {
@@ -522,7 +522,7 @@
     "using Crayons\n",
     "\n",
     "function print_decorated_line(characters, color)\n",
-    "    characters = display_charcter.(characters)\n",
+    "    characters = display_character.(characters)\n",
     "    \n",
     "    line = characters[1]\n",
     "    for c in characters[2:end]\n",
