--- a/HolidayGreetings/HappyNewYear2021_Python.ipynb
+++ b/HolidayGreetings/HappyNewYear2021_Python.ipynb
@@ -61,7 +61,7 @@
      "output_type": "stream",
      "text": [
       "Number of Unique Characters =  12\n",
-      "{'A', '2', 'P', 'H', 'Y', 'N', 'W', '0', ' ', 'E', '1', 'R'}\n"
+      "{'N', ' ', '2', 'H', 'R', '1', 'A', 'E', 'W', 'P', '0', 'Y'}\n"
      ]
     }
    ],
@@ -276,64 +276,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['', '#   #', '#   #', '#####', '#   #', '#   #', '']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s = H\n",
-    "\n",
-    "canvas_size=(9,9)\n",
-    "\n",
-    "s = s.split('\\n')\n",
-    "\n",
-    "character_height = len(s)\n",
-    "character_width = max([len(l) for l in s])\n",
-    "canvas_height = character_height if (character_height>canvas_size[0]) else  canvas_size[0] \n",
-    "canvas_width = character_width if (character_width>canvas_size[0] ) else canvas_size[1] \n",
-    "\n",
-    "fill_top, fill_bottom = whole_half(canvas_height-character_height)\n",
-    "s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['         ', '', '#   #', '#   #', '#####', '#   #', '#   #', '']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "for i in range(0,fill_top):\n",
-    "    s.insert(0, \" \"*canvas_width)\n",
-    "\n",
-    "s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "def display_charcter(s, canvas_size=(7,7)):\n",
+    "def display_character(s, canvas_size=(7,7)):\n",
     "    s = s.split('\\n')\n",
     "    \n",
     "    character_height = len(s)\n",
@@ -345,7 +290,6 @@
     "\n",
     "    for i in range(0,fill_top):\n",
     "        s.insert(0, \" \"*canvas_width)\n",
-    "    \n",
     "\n",
     "    for j in range(0,fill_bottom):\n",
     "        s.insert(len(s)-1, \" \"*canvas_width)\n",
@@ -357,18 +301,15 @@
     "        for i in range(0,fill_left):\n",
     "            s[k] = \" \"+s[k]\n",
     "        \n",
-    "\n",
     "        for j in range(0,fill_right):\n",
     "            s[k] = s[k]+\" \"\n",
-    "           \n",
-    "    \n",
-    "        \n",
+    " \n",
     "    return s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -377,13 +318,13 @@
        "['       ', ' #   # ', ' #   # ', ' ##### ', ' #   # ', ' #   # ', '       ']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "display_charcter(H)"
+    "display_character(H)"
    ]
   },
   {
@@ -395,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +354,7 @@
        "        '       ']], dtype='<U7')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,13 +362,13 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "characters = np.array([display_charcter(c) for c in [H,A,P,P,Y]])\n",
+    "characters = np.array([display_character(c) for c in [H,A,P,P,Y]])\n",
     "characters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +383,7 @@
        "       '                                   '], dtype='<U35')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -529,15 +470,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from colorama import * # To change font colors (https://github.com/tartley/colorama)\n",
+    "from colorama import * \n",
     "\n",
     "def print_decorated_line(characters, color=Fore.BLACK):\n",
-    "    characters = np.array([display_charcter(c) for c in characters])\n",
+    "    characters = np.array([display_character(c) for c in characters])\n",
     "    \n",
     "    line = characters[0]\n",
     "\n",
@@ -550,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
